deployments/templates/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-database
  template:
    metadata:
      labels:
        app: mongo-database
    spec:
      containers:
      - name: mongo-database
        image: mongo
        ports:
          - containerPort: 27017
