deployments/templates/authenticator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authenticator
spec:
  type: LoadBalancer
  selector:
    app: authenticator
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
