deployments/templates/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-database
spec:
  type: ClusterIP
  selector:
    app: mongo-database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
