deployments/templates/sensor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sensor-metadata
spec:
  type: LoadBalancer
  selector:
    app: sensor-metadata
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
